--- a/templates/about_template.html
+++ b/templates/about_template.html
@@ -1,4 +1,4 @@
-{% include 'snippets/header.html' with context %}
+{% include 'snippets/header.html' %}
 <h1>Blog Posts</h1>
 <ul>
   {% for post in posts %}
@@ -16,4 +16,4 @@
   </li>
   {% endfor %}
 </ul>
-{% include 'snippets/footer.html' with context %}
+{% include 'snippets/footer.html' %}
