deploy: c6bade9c5aec537ba31b57d040d1d381a1d4c377

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -20,12 +20,26 @@
 
 .nav-wrapper {
   /* border: 1px solid lightblue; */
-  border-bottom: 1px solid var(--pico-secondary);
+  border-bottom: 1px solid var(--pico-muted-border-color);
   margin-bottom: 2em;
   position: sticky;
   top: 0;
+  background-color: var(--pico-background-color);
 }
 
 nav {
-  padding: 1.5em 0;
+  padding: .5em 0;
+}
+
+a.nav-title {
+  color: inherit;
+  text-decoration-color: inherit;
+}
+
+ul, ol {
+  padding: 0;
+}
+
+ul li {
+  list-style: none;
 }
