--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -6,29 +6,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
-  <link rel="stylesheet" href="{{ base_url }}assets/css/pico.cyan.min.css">
+  <link rel="stylesheet" href="{{ base_url }}assets/css/pico.pumpkin.min.css">
   <link rel="stylesheet" href="{{ base_url }}assets/css/app.css">
 </head>
 
 <body>
-  <!-- <nav class="container">
-    <a class="contrast" href="{{ base_url }}index.html">Proyecto Torrus</a>
-    <div style="float: right;">
-      {% for category in categories %}
-      <a href="{{ base_url }}categories/{{ category }}.html">{{ category }}</a>
-      {% endfor %}
-    </div>
-  </nav> -->
   
   <div class="nav-wrapper">
     <nav class="container">
-      <ul>
-        <li><strong>Proyecto Torrus</strong></li>
+      <ul class="nav-branding">
+        <li><a 
+          class="nav-title" 
+          href="{{ base_url }}index.html">
+            <strong>Proyecto Torrus</strong>
+        </a></li>
       </ul>
-      <ul>
+      <ul class="nav-pages">
         <li><a href="{{ base_url }}about.html">About</a></li>
-        {% for category in categories %}
-          <li><a href="{{ base_url }}categories/{{ category }}.html">{{ category }}</a></li>
+        <li>|</li>
+        {% for nav_category in categories %}
+          <li><a href="{{ base_url }}categories/{{ nav_category }}.html">{{ nav_category }}</a></li>
         {% endfor %}
       </ul>
     </nav>
